# Full-Stack-React-Python-and-GraphQL

./: .gitignore  LICENSE  README.md  pyproject.toml
app/app/: schema.py  settings.py  urls.py
app/tracks/: models.py
app/tracks/migrations/: 0001_initial.py
app/users/: schema.py
tests/: test_react_tracks.py
