[tool.poetry]
name = "react-tracks"
version = "0.1.0"
description = ""
authors = ["Tonalli Rodriguez <t3rodrig@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
django-graphql-jwt = "^0.3.1"
django-cors-headers = "^3.7.0"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
